update to B4 minecraft 1.5 update forge modloader etc. update lwjgl to 2.8.5 update texturepack move font to texturepack remove some unsuppest mod add some shaderpacks
Signed-off-by: pa001024 <pa001024@qq.com>